--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -106,7 +106,8 @@ jobs:
         with:
           context: .
           file: docker/main.Dockerfile
-          build-args: BASE_IMAGE_NAME='ralphv/realesrgan-base'
+          build-args:
+            BASE_IMAGE_NAME=ralphv/realesrgan-base
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -136,7 +137,8 @@ jobs:
         with:
           context: .
           file: docker/mainWithModels.Dockerfile
-          build-args: BASE_IMAGE_NAME='ralphv/realesrgan-base'
+          build-args:
+            BASE_IMAGE_NAME=ralphv/realesrgan-base
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
