update the base image reference

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -107,7 +107,7 @@ jobs:
           context: .
           file: docker/main.Dockerfile
           build-args:
-            BASE_IMAGE_NAME=ralphv/realesrgan-base
+            BASE_IMAGE_NAME=ghcr.io/ralphv/realesrgan-base
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -138,7 +138,7 @@ jobs:
           context: .
           file: docker/mainWithModels.Dockerfile
           build-args:
-            BASE_IMAGE_NAME=ralphv/realesrgan-base
+            BASE_IMAGE_NAME=ghcr.io/ralphv/realesrgan-base
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
