--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -114,7 +114,7 @@ jobs:
           context: .
           file: docker/main.Dockerfile
           build-args:
-            BASE_IMAGE_NAME=ghcr.io/ralphv/realesrgan-base
+            BASE_IMAGE_NAME=ralphv/realesrgan-base
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta-main.outputs.tags }}
           labels: ${{ steps.meta-main.outputs.labels }}
@@ -135,7 +135,7 @@ jobs:
           context: .
           file: docker/mainWithModels.Dockerfile
           build-args:
-            BASE_IMAGE_NAME=ghcr.io/ralphv/realesrgan-base
+            BASE_IMAGE_NAME=ralphv/realesrgan-base
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta-with-models.outputs.tags }}
           labels: ${{ steps.meta-with-models.outputs.labels }}
