--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -14,7 +14,7 @@ env:
   IMAGE_NAME: "ralphv/realesrgan"
 
 jobs:
-  build:
+  build-docker-hub-publish:
 
     runs-on: ubuntu-latest
     permissions:
@@ -23,6 +23,9 @@ jobs:
       id-token: write
 
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
