--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -118,7 +118,7 @@ jobs:
           context: .
           file: docker/main.Dockerfile
           build-args:
-            BASE_IMAGE_NAME=ralphv/realesrgan-base
+            BASE_IMAGE_NAME=${{ fromJSON(steps.meta-base.outputs.json).tags[0] }}
           push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta-main.outputs.tags }}
@@ -140,7 +140,7 @@ jobs:
           context: .
           file: docker/mainWithModels.Dockerfile
           build-args:
-            BASE_IMAGE_NAME=ralphv/realesrgan-base
+            BASE_IMAGE_NAME=${{ fromJSON(steps.meta-base.outputs.json).tags[0] }}
           push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta-with-models.outputs.tags }}
