--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -48,6 +48,7 @@ jobs:
 
       - name: Extract Docker metadata
         id: meta-main
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
@@ -78,6 +79,7 @@ jobs:
 
       - name: Extract Docker metadata
         id: meta-with-models
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934 # v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-with-models
@@ -113,6 +115,7 @@ jobs:
 
       - name: Build and push Docker image (main)
         id: build-and-push-main
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
@@ -135,6 +138,7 @@ jobs:
 
       - name: Build and push Docker image (main with models)
         id: build-and-push-main-with-models
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
