--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -14,7 +14,7 @@ env:
   IMAGE_NAME: "ralphv/realesrgan"
 
 jobs:
-  build:
+  build-docker-hub:
 
     runs-on: ubuntu-latest
     permissions:
@@ -94,7 +94,7 @@ jobs:
         with:
           context: .
           file: docker/base.Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
+          push: "true"
           tags: ${{ steps.meta-base.outputs.tags }}
           labels: ${{ steps.meta-base.outputs.labels }}
           cache-from: type=gha
@@ -114,7 +114,7 @@ jobs:
           context: .
           file: docker/main.Dockerfile
           build-args:
-            BASE_IMAGE_NAME=ralphv/realesrgan-base
+            BASE_IMAGE_NAME=${{ fromJSON(steps.meta-base.outputs.json).tags[0] }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta-main.outputs.tags }}
           labels: ${{ steps.meta-main.outputs.labels }}
@@ -135,7 +135,7 @@ jobs:
           context: .
           file: docker/mainWithModels.Dockerfile
           build-args:
-            BASE_IMAGE_NAME=ralphv/realesrgan-base
+            BASE_IMAGE_NAME=${{ fromJSON(steps.meta-base.outputs.json).tags[0] }}
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta-with-models.outputs.tags }}
           labels: ${{ steps.meta-with-models.outputs.labels }}
