--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -150,7 +150,7 @@ jobs:
           file: docker/main.Dockerfile
           build-args:
             BASE_IMAGE_NAME=${{ fromJSON(steps.meta-base.outputs.json).tags[0] }}
-          push: "${{ github.event_name != 'pull_request' }}"
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta-main.outputs.tags }}
           labels: ${{ steps.meta-main.outputs.labels }}
           cache-from: type=gha
@@ -181,23 +181,15 @@ jobs:
           file: docker/mainWithModels.Dockerfile
           build-args:
             BASE_IMAGE_NAME=${{ fromJSON(steps.meta-base.outputs.json).tags[0] }}
-          push: "${{ github.event_name != 'pull_request' }}"
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta-with-models.outputs.tags }}
           labels: ${{ steps.meta-with-models.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      # Sign the resulting Docker image digest except on PRs.
-      # This will only write to the public Rekor transparency log when the Docker
-      # repository is public to avoid leaking data.  If you would like to publish
-      # transparency data even for private images, pass --force to cosign below.
-      # https://github.com/sigstore/cosign
       - name: Sign the published Docker image (
         if: ${{ github.event_name != 'pull_request' }}
         env:
-          # https://docs.github.com/en/actions/security-guides/security-hardening-for-github-actions#using-an-intermediate-environment-variable
           TAGS: ${{ steps.meta-with-models.outputs.tags }}
           DIGEST: ${{ steps.build-and-push-main-with-models.outputs.digest }}
-        # This step uses the identity token to provision an ephemeral certificate
-        # against the sigstore community Fulcio instance.
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
