--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -109,6 +109,7 @@ jobs:
 
       - name: Build and push Docker image (main)
         id: build-and-push-main
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
@@ -131,6 +132,7 @@ jobs:
 
       - name: Build and push Docker image (main with models)
         id: build-and-push-main-with-models
+        if: ${{ github.event_name != 'pull_request' }}
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
